--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="text-center text-md-start pe-lg-5 me-lg-5 mt-3 mt-md-0">
                     <div class="">
                         <p class="fs-4">Hello, It's Me</p>
-                        <p><span class="fs-4">I'm </span><span class="fs-2 fw-bold">Aung Htike Lynn</span></p>
+                        <p><span class="fs-4">I'm </span><span class="fs-2 fw-bold brand_name">Aung Htike Lynn</span></p>
                         <p class="fs-4">Junior Web Developer</p>
                     </div>
                     <a href="" class="button-1 me-3" target="_blank">Download CV</a>
@@ -69,12 +69,12 @@
     <div class="container mt-5">
         <div class="row text-center">
             <div class="col-12 col-lg-6 about_line p-3">
-                <p class="fs-3 fw-bold text-center" id="about">About</p>
+                <p class="fs-3 fw-bold text-center brand_name" id="about">About</p>
                 <p class="text-center">
                     Hello! I'm Aung Htike Lynn. I studied at Hinthada University from 2016 to 2019. I am interested in Web Development Career and Programming Languages, and started learning at Hein Learn in 2024. With reasonably good communication and presentation skills, I am hardworking, sincere, and dedicated to my work. I possess creative thinking abilities and can effectively cope with work pressure. I am seeking to work in a progressive organization that offers a conducive and challenging work environment for continuous learning and growth. Since beginning my journey, I have been committed to applying and expanding my knowledge and skills in meaningful ways.</p>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="fs-3 fw-bold text-center">Basic Information</p>
+                <p class="fs-3 fw-bold text-center brand_name">Basic Information</p>
                 <div class="ps-md-5 pe-md-5 ps-2 pe-2">
                     <div class="row text-start mt-md-2">
                         <div class="col-12 col-md-4 fw-bold">
@@ -134,7 +134,7 @@
 
     <!-- Start Education -->
     <div class="container mt-5">
-        <p class="text-center fs-3 fw-bold">Education</p>
+        <p class="text-center fs-3 fw-bold brand_name">Education</p>
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
@@ -156,7 +156,7 @@
 
     <!-- Start Skill -->
     <div class="container mt-5">
-        <p class="fs-3 fw-bold text-center">Skills</p>
+        <p class="fs-3 fw-bold text-center brand_name">Skills</p>
         <div class="justify-content-center skill-logo m-sm-0 row">
             <div class="col-4 col-md-2 col-lg-1">
                 <img src="css_&_bootstrap/image/HTML5 logo.png" alt="" width="60" title="HTML">
@@ -194,7 +194,7 @@
 
     <!-- Start Project -->
     <div class="container mt-5">
-        <p class="fs-3 fw-bold text-center" id="project">Projects</p>
+        <p class="fs-3 fw-bold text-center brand_name" id="project">Projects</p>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mt-3 border-0 shadow pj-image-hd p-3 ">
@@ -304,7 +304,7 @@
     <!-- Start Contact -->
     <div class="container mt-5">
         <div class="justify-content-center row ps-lg-5 pe-lg-5">
-            <p class="fs-3 fw-bold text-center" id="contact">Contact Me</p>
+            <p class="fs-3 fw-bold text-center brand_name" id="contact">Contact Me</p>
             <p class="text-center">I am avaliable for work, when you're ready let me know!</p>
             <div class="col-md-6 ps-lg-5 pe-lg-5">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
