--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
                     <p><i class="fa-solid fa-book-open-reader fs-1" style="color: #1479FB;"></i></p>
                     <p class="fs-4">Basic Education</p>
-                    <p>I had attended Grade 1 to 4 at B.E.M.S Nyanpinzay and Grade 5 to 10 at B.E.H.S Zalun. At 2015, I had passed my Grade 10 class at B.E.H.S Zalun.</p>
+                    <p>I had attended Grade 1 to 4 at Primary School - Nyanpinzay and Grade 5 to 10 at B.E.H.S Zalun. At 2015, I had passed my Grade 10 class at B.E.H.S Zalun.</p>
                 </div>
             </div>
         </div>
