--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="offcanvas offcanvas-start text-bg-light w-auto" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel" id="navbarNavDropdown">
+            <div class="offcanvas offcanvas-top text-bg-light w-auto" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel" id="navbarNavDropdown">
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav ms-auto">
@@ -45,21 +45,28 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="text-center text-md-start pe-lg-5 me-lg-5 mt-3 mt-md-0">
-                    <div class="">
+                <div class="row">
+                    <div class="col-12 text-center text-md-start pe-lg-5 me-lg-5 mt-3 mt-md-0">
                         <p class="fs-4">Hello, It's Me</p>
+                    </div>
+                    <div class="col-12 text-center text-md-start">
                         <p><span class="fs-4">I'm </span><span class="fs-2 fw-bold brand_name">Aung Htike Lynn</span></p>
+                    </div>
+                    <div class="col-12 text-center text-md-start">
                         <p class="fs-4">Junior Web Developer</p>
                     </div>
-                    <a href="" class="button-1 me-3" target="_blank">Download CV</a>
-                    <a href=""class="button-2 " target="_blank">Contact</a>
-                    <ul class="nav icon pt-3 m-md-0">
-                        <li class="nav-link"><a href="tel:+959957068157" target="_blank"><i class="fa-solid fa-phone fs-4"></i></a></li>
-                        <li class="nav-link"><a href="mailto:aunghtikelynn23599@gmail.com" target="_blank"><i class="fa-solid fa-envelope fs-4"></i></a></li>
-                        <li class="nav-link"><a href="https://www.facebook.com/aunghtike.lynn?mibextid=JRoKGi" target="_blank"><i class="fa-brands fa-facebook fs-4"></i></a></li>
-                        <li class="nav-link"><a href="https://github.com/aunghtikelynn" target="_blank"><i class="fa-brands fa-github fs-4"></i></a></li>
-                    </ul>
+                    <div class="col-12 text-center text-md-start">
+                        <a href="" class="button-1 me-3" target="_blank">Download CV</a>
+                        <a href="#contact"class="button-2 " target="_blank">Contact</a>
+                    </div>
+                    <div class="col-12 text-center text-md-start icon pt-4">
+                        <a href="tel:+959957068157" target="_blank" class="pe-4"><i class="fa-solid fa-phone fs-4"></i></a>
+                        <a href="mailto:aunghtikelynn23599@gmail.com" target="_blank" class="pe-4"><i class="fa-solid fa-envelope fs-4"></i></a>
+                        <a href="https://www.facebook.com/aunghtike.lynn?mibextid=JRoKGi" target="_blank" class="pe-4"><i class="fa-brands fa-facebook fs-4"></i></a>
+                        <a href="https://github.com/aunghtikelynn" target="_blank" class=""><i class="fa-brands fa-github fs-4"></i></a>
+                    </div>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -68,14 +75,15 @@
     <!-- Start About -->
     <div class="container mt-5">
         <div class="row text-center">
-            <div class="col-12 col-lg-6 about_line p-3">
-                <p class="fs-3 fw-bold text-center brand_name" id="about">About</p>
+            <div class="col-12 col-lg-6 about_line">
+                <p class="fs-3 fw-bold brand_name" id="about">About</p>
                 <p class="text-center">
-                    Hello! I'm Aung Htike Lynn. I studied at Hinthada University from 2016 to 2019. I am interested in Web Development Career and Programming Languages, and started learning at Hein Learn in 2024. With reasonably good communication and presentation skills, I am hardworking, sincere, and dedicated to my work. I possess creative thinking abilities and can effectively cope with work pressure. I am seeking to work in a progressive organization that offers a conducive and challenging work environment for continuous learning and growth. Since beginning my journey, I have been committed to applying and expanding my knowledge and skills in meaningful ways.</p>
+                    Hello! I'm Aung Htike Lynn. I studied at Hinthada University from 2016 to 2019. I am interested in Web Development Career and Programming Languages, and started learning at Hein Learn in 2024. With reasonably good communication and presentation skills, I am hardworking, sincere, and dedicated to my work. I possess creative thinking abilities and can effectively cope with work pressure. I am seeking to work in a progressive organization that offers a conducive and challenging work environment for continuous learning and growth. Since beginning my journey, I have been committed to applying and expanding my knowledge and skills in meaningful ways.
+                </p>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="fs-3 fw-bold text-center brand_name">Basic Information</p>
-                <div class="ps-md-5 pe-md-5 ps-2 pe-2">
+                <p class="fs-3 fw-bold brand_name">Basic Information</p>
+                <div class="ps-md-5 pe-md-5 ps-4 pe-4">
                     <div class="row text-start mt-md-2">
                         <div class="col-12 col-md-4 fw-bold">
                             <p>Date of Birth :</p>
@@ -140,14 +148,14 @@
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
                     <p><i class="fa-solid fa-graduation-cap fs-1" style="color: #1479FB;"></i></p>
                     <p class="fs-4">Hinthada Universiry</p>
-                    <p>I start my higher education at 2016 by attending. Major is Botanty. I have graduated bechelor degree named B.Sc (Bachelar of Science) from my University in 21 Dec 2019.</p>
+                    <p>I start my higher education at 2016 by attending. Major is Botanty. I have graduated bachelor degree named B.Sc (Bachelor of Science) from my University in 21 Dec 2019.</p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
                     <p><i class="fa-solid fa-book-open-reader fs-1" style="color: #1479FB;"></i></p>
                     <p class="fs-4">Basic Education</p>
-                    <p>I had attended Grade 1 to 4 at Primary School - Nyanpinzay and Grade 5 to 10 at B.E.H.S Zalun. At 2015, I had passed my Grade 10 class at B.E.H.S Zalun.</p>
+                    <p>I had attended Grade 1 to 4 at Primary School - Nyaungpinzay and Grade 5 to 10 at B.E.H.S Zalun. At 2015, I had passed my Grade 10 class at B.E.H.S Zalun.</p>
                 </div>
             </div>
         </div>
@@ -201,7 +209,7 @@
                     <img src="css_&_bootstrap/image/Lynn Shop Laravel.PNG" alt="" class="card-img-top pj-image">
                     <div class="card-body text-center card_title">
                         <p class="fs-5 fw-bold">Lynn Shop</p>
-                        <p class="card_text">Backend Development by Laravel 10</p>
+                        <p class="card_text">Backend Development by Laravel 11</p>
                     </div>
                     <div>
                         <a href="https://github.com/aunghtikelynn/LynnShop" class="button-1 float-start" target="_blank">Github</a>
@@ -213,7 +221,7 @@
                     <img src="css_&_bootstrap/image/Lynn Blog Laravel.PNG" alt="" class="card-img-top pj-image">
                     <div class="card-body text-center card_title">
                         <p class="fs-5 fw-bold">Lynn Blog</p>
-                        <p class="card_text">Backend Development by Laravel 10</p>
+                        <p class="card_text">Backend Development by Laravel 11</p>
                     </div>
                     <div>
                         <a href="https://github.com/aunghtikelynn/LynnBlog" class="button-1 float-start" target="_blank">Github</a>
@@ -308,13 +316,13 @@
             <p class="text-center">I am avaliable for work, when you're ready let me know!</p>
             <div class="col-md-6 ps-lg-5 pe-lg-5">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
-                    <img src="css_&_bootstrap/image/mail logo.png" alt="" width="60">
+                    <a href="mailto:aunghtikelynn23599@gmail.com" target="_blank"><img src="css_&_bootstrap/image/mail logo.png" alt="" width="60"></a>
                     <p class="pt-3">aunghtikelynn23599@gmail.com</p>
                 </div>
             </div>
             <div class="col-md-6 ps-lg-5 pe-lg-5">
                 <div class="shadow p-3 mb-5 bg-body-tertiary rounded text-center">
-                    <img src="css_&_bootstrap/image/phone logo.png" alt="" width="60">
+                    <a href="tel:+959957068157" target="_blank"><img src="css_&_bootstrap/image/phone logo.png" alt="" width="60"></a>
                     <p class="pt-3">+959957068157</p>
                 </div>
             </div>
