--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <p class="fs-4">Junior Web Developer</p>
                     </div>
                     <div class="col-12 text-center text-md-start">
-                        <a href="https://drive.google.com/file/d/1fH1nO6GVzPCElI4-141NW6wLuhxd87Fi/view?usp=drive_link" class="button-1 me-3" target="_blank">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1fH1nO6GVzPCElI4-141NW6wLuhxd87Fi/view?usp=sharing" class="button-1 me-3" target="_blank">Download CV</a>
                         <a href="#contact"class="button-2 " target="_blank">Contact</a>
                     </div>
                     <div class="col-12 text-center text-md-start icon pt-4">
