--- a/BootStrap/Property_Care_Service/service-detail.html
+++ b/BootStrap/Property_Care_Service/service-detail.html
@@ -13,21 +13,21 @@
     <div class="" >
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ms-md-4 ms-lg-5">
-                <a href="index.html" class="navbar-brand ms-lg-5"><img src="" alt="" width="100px" height="100px"></a>
+                <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/1.Logo On White Background.jpg" alt="" width="" height="100px"></a>
                 <div class="offcanvas offcanvas-start w-auto bg-warning-subtle" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 active active_page" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link me-2 me-lg-3 active_page text-dark" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="service.html">Services</a>
+                                <a class="nav-link me-2 me-lg-3 nav_text" href="service.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="about.html">About</a>
+                                <a class="nav-link me-2 me-lg-3 nav_text" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="contact.html">Contact</a>
+                                <a class="nav-link me-2 me-lg-3 nav_text" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -41,6 +41,7 @@
         </nav>
     </div>
     <!-- End Nav Bar --> 
+
 
     <!-- Start Carousal -->
     <div class="main d-flex">
@@ -146,7 +147,6 @@
             </div>
         </div>
     </div>
-    
     <!-- End Service -->
 
     <!-- Start Footer -->
