--- a/BootStrap/Property_Care_Service/service.html
+++ b/BootStrap/Property_Care_Service/service.html
@@ -13,21 +13,21 @@
     <div class="" >
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid ms-md-4 ms-lg-5">
-                <a href="index.html" class="navbar-brand ms-lg-5"><img src="" alt="" width="100px" height="100px"></a>
+                <a href="index.html" class="navbar-brand ms-lg-5"><img src="images/1.Logo On White Background.jpg" alt="" width="" height="100px"></a>
                 <div class="offcanvas offcanvas-start w-auto bg-warning-subtle" tabindex="-1" id="navbarNavDropdown" aria-labelledby="navbarNavDropdown">
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 active active_page" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link me-2 me-lg-3 active_page text-dark" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="service.html">Services</a>
+                                <a class="nav-link me-2 me-lg-3 nav_text" href="service.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="about.html">About</a>
+                                <a class="nav-link me-2 me-lg-3 nav_text" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav_hover me-2 me-lg-3 text-white" href="contact.html">Contact</a>
+                                <a class="nav-link me-2 me-lg-3 nav_text" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </div>
-    <!-- End Nav Bar --> 
+    <!-- End Nav Bar -->  
 
 
     <!-- Start Carousal -->
@@ -137,12 +137,11 @@
     <!-- end course -->
 
     <!-- Start Footer -->
-    <!-- Start Footer -->
-    <footer class="container-fluid bg-dark mt-5">
-        <div class="container text-white py-5">
+    <footer class="container-fluid bg-black">
+        <div class="container text-white py-3">
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <img src="images/ZKKB-logo.png" alt="" class="footer_logo">
+                    <img src="images/7.Logo On Black Background.jpg" alt="" class="footer_logo">
                     <p>If you have any problems in your home, feel free to contact us.</p>
                     <p>
                         <a href="" class="social_logo"><i class="fa-brands fa-square-facebook fa-2x mx-2"></i></a>
@@ -171,7 +170,7 @@
                 </div>
             </div>
             <hr>
-            <p class="pt-2">
+            <p class="mt-2">
             <span>
                 © 2026 ZKKB Property Care Services LLC
             </span>
